--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-live-clock": "^6.1.20"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.1",
+    "@types/node": "^20.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
