--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/third-parties": "^14.2.3",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
