--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/third-parties": "^14.2.3",
+    "@nextui-org/accordion": "^2.0.34",
+    "@nextui-org/react": "^2.4.1",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
