--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "scoreboard",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prestart": "next build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -14,18 +15,19 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/third-parties": "^14.2.3",
+    "@next/third-parties": "15.2.4",
     "@nextui-org/accordion": "^2.0.34",
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18",
-    "react-live-clock": "^6.1.20"
+    "next": "15.2.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-live-clock": "^6.1.20",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.13",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
